Ajout de PageMenu pour la page de login Ajout du texte en/fr dans la page de profil Modification de l'affichage du nom dans le menu Modification de la fonction qui supprime les données pour ne tenir compte que des données de l'utilisateur Modification de l'objet a checker pour voir si le user a bien été loggué Implementato des fonctions dans ProfileVC

--- a/Frismart/Resources/en.lproj/Localizable.strings
+++ b/Frismart/Resources/en.lproj/Localizable.strings
@@ -16,3 +16,5 @@
 "HomeScreen_CategoriesSectionTitle" = "Top Categories";
 "StoreDetailsScreen_RatingSectionTitle" = "Rate this store";
 "StoreDetailsScreen_AlertView_Rating" = "You must be logged in to rate a store";
+"ProfileScreen_EditImage" = "Edit Photo";
+"ProfileScreen_Logout" = "Log Out";
