--- a/Frismart/Resources/en.lproj/Localizable.strings
+++ b/Frismart/Resources/en.lproj/Localizable.strings
@@ -12,9 +12,25 @@
 "Menu_Favorites" = "FAVORITES";
 "Menu_Settings" = "SETTINGS";
 "Menu_Logout" = "LOGOUT";
+
 "HomeScreen_StoresSectionTitle" = "Top Stores";
 "HomeScreen_CategoriesSectionTitle" = "Top Categories";
+
 "StoreDetailsScreen_RatingSectionTitle" = "Rate this store";
 "StoreDetailsScreen_AlertView_Rating" = "You must be logged in to rate a store";
+
 "ProfileScreen_EditImage" = "Edit Photo";
 "ProfileScreen_Logout" = "Log Out";
+
+"LoginPage_UsernamePlaceholder" = "Username";
+"LoginPage_PasswordPlaceholder" = "Password";
+"LoginPage_LoginButtonTitle" = "Sign In";
+"LoginPage_ForgetPasswordButtonTitle" = "Forgot your password?";
+
+"RegisterPage_EmailPlaceholder" = "Email";
+"RegisterPage_FullnamePlaceholder" = "Firstname & Lastname";
+"RegisterPage_UsernamePlaceholder" = "Username";
+"RegisterPage_PasswordPlaceholder" = "Password";
+
+"LoginScreen_SignInPageTitle" = "Sign In";
+"LoginScreen_SignUpPageTitle" = "Sign Up";
