--- a/Todo.txt
+++ b/Todo.txt
@@ -6,7 +6,11 @@ TODO:
 [] 2. LoginViewController : gestion de la création de compte Frismart. Verifier si l’API Call fonctionne correctement. Mettre une alerte pour signifier a l’utilisateur qu’il doit consulter sa boite email et activer son compte pour pouvoir se connecter
 [] 3. ProfileViewController : Gérer la mise a jour de la photo.
 [] 4. HomeViewController : L’affichage de topStore dans cet écran pose problème. Trouver un moyen de le régler.
-[x] 5. SearchViewController : TOUT
-[x] 6. MapViewController : Ajouter les vue de detail du store au clic. Gérer la couleur des boutons lorsqu’ils sont sélectionnés
 [] 7. Affichage l’heure en fonction des horaires parsées
 [] 8. Les données de l’app ne se raflassent comme il faut.
+
+----------------------------------------
+DONE:
+----------------------------------------
+[x] 5. SearchViewController : TOUT
+[x] 6. MapViewController : Ajouter les vue de detail du store au clic. Gérer la couleur des boutons lorsqu’ils sont sélectionnés
