--- a/Todo.txt
+++ b/Todo.txt
@@ -6,7 +6,7 @@ TODO:
 [] 3. ProfileViewController : Gérer la mise a jour de la photo.
 [] 4. HomeViewController : L’affichage de topStore dans cet écran pose problème. Trouver un moyen de le régler.
 [] 7. Affichage l’heure en fonction des horaires parsées
-[] 8. Les données de l’app ne se raflassent comme il faut.
+[] 8. Les données de l’app ne se rafraichissent comme il faut.
 
 ----------------------------------------
 DONE:
