--- a/Frismart/Resources/en.lproj/Localizable.strings
+++ b/Frismart/Resources/en.lproj/Localizable.strings
@@ -5,6 +5,10 @@
   Created by Karl Mounguengui Nguema on 2015-08-19.
   Copyright (c) 2015 Karl Mounguengui. All rights reserved.
 */
+
+"Error_EmptyFields" = "All fields are required";
+"Error_RegisterFailed" = "An error occurred while trying to register. Please try again later";
+
 "Menu_Login" = "LOGIN";
 "Menu_Home" = "HOME";
 "Menu_Categories" = "CATEGORIES";
@@ -31,6 +35,7 @@
 "RegisterPage_FullnamePlaceholder" = "Firstname & Lastname";
 "RegisterPage_UsernamePlaceholder" = "Username";
 "RegisterPage_PasswordPlaceholder" = "Password";
+"RegisterPage_RegisterSuccess" = "Please check your email to complete the registration";
 
 "LoginScreen_SignInPageTitle" = "Sign In";
 "LoginScreen_SignUpPageTitle" = "Sign Up";
