--- a/Frismart/Resources/en.lproj/Localizable.strings
+++ b/Frismart/Resources/en.lproj/Localizable.strings
@@ -8,6 +8,7 @@
 
 "Error_EmptyFields" = "All fields are required";
 "Error_RegisterFailed" = "An error occurred while trying to register. Please try again later";
+"Error_FrismartLoginfailed" = "Username/Password invalid or you are being denied to access. Please try again";
 
 "Menu_Login" = "LOGIN";
 "Menu_Home" = "HOME";
@@ -35,6 +36,7 @@
 "RegisterPage_FullnamePlaceholder" = "Firstname & Lastname";
 "RegisterPage_UsernamePlaceholder" = "Username";
 "RegisterPage_PasswordPlaceholder" = "Password";
+"RegisterPage_RegisterButtonTitle" = "Register";
 "RegisterPage_RegisterSuccess" = "Please check your email to complete the registration";
 
 "LoginScreen_SignInPageTitle" = "Sign In";
