--- a/Todo.txt
+++ b/Todo.txt
@@ -4,14 +4,13 @@ TODO:
 
 [-] 3. ProfileViewController : Gérer la mise a jour de la photo.
 [-] 4. HomeViewController : L’affichage de topStore dans cet écran pose problème. Trouver un moyen de le régler.
-
 [-] 8. JSONData : Les données de l’app ne se rafraichissent comme il faut.
 [] 9. Migration des données : Il faut que les données soient stockées dans Core Data pour que l'appli fonctionne offline
 [-] 10. StoreDetailsViewController : Probleme avec le label de la description (Encore :( )
 [] 11. StoreDetailsViewController : Quand on presse l'horloge on doit faire apparaitre les horaires du magazin
-[] 12. RegisterPageViewController : Gestion de l'enregistrement d'un nouvel utilisateur
 [] 13. SearchViewController : Ajouter le champ pour la ville
 [] 14. CategoriesViewController : Utiliser un UICollectionView avec les icones de catégories
+[] 15. RegisterPageViewController : Faire le Log Out
 
 ----------------------------------------
 DONE:
@@ -22,3 +21,4 @@ DONE:
 Ranger le clavier si on tape hors des champs.
 [x] 2. LoginViewController : gestion de la création de compte Frismart. Verifier si l’API Call fonctionne correctement. Mettre une alerte pour signifier a l’utilisateur qu’il doit consulter sa boite email et activer son compte pour pouvoir se connecter
 [x] 7. StoresPerCategoryViewController & StoreDetailsViewController : Affichage l’heure en fonction des horaires parsées
+[x] 12. RegisterPageViewController : Gestion de l'enregistrement d'un nouvel utilisateur
