--- a/Todo.txt
+++ b/Todo.txt
@@ -2,7 +2,6 @@
 TODO:
 ----------------------------------------
 
-[-] 3. ProfileViewController : Gérer la mise a jour de la photo.
 [-] 4. HomeViewController : L’affichage de topStore dans cet écran pose problème. Trouver un moyen de le régler.
 [-] 8. JSONData : Les données de l’app ne se rafraichissent comme il faut.
 [] 9. Migration des données : Il faut que les données soient stockées dans Core Data pour que l'appli fonctionne offline
@@ -10,6 +9,7 @@ TODO:
 [] 11. StoreDetailsViewController : Quand on presse l'horloge on doit faire apparaitre les horaires du magazin
 [] 13. SearchViewController : Ajouter le champ pour la ville
 [] 14. CategoriesViewController : Utiliser un UICollectionView avec les icones de catégories
+[] 15. MenuViewController : Mise a jour de la photo de profil dans le menu.
 
 ----------------------------------------
 DONE:
@@ -22,3 +22,4 @@ Ranger le clavier si on tape hors des champs.
 [x] 7. StoresPerCategoryViewController & StoreDetailsViewController : Affichage l’heure en fonction des horaires parsées
 [x] 12. RegisterPageViewController : Gestion de l'enregistrement d'un nouvel utilisateur
 [x] 15. RegisterPageViewController : Faire le Log Out
+[x] 3. ProfileViewController : Gérer la mise a jour de la photo.
