--- a/Todo.txt
+++ b/Todo.txt
@@ -6,9 +6,7 @@ TODO:
 [-] 8. JSONData : Les données de l’app ne se rafraichissent comme il faut.
 [] 9. Migration des données : Il faut que les données soient stockées dans Core Data pour que l'appli fonctionne offline
 [-] 10. StoreDetailsViewController : Probleme avec le label de la description (Encore :( )
-[] 11. StoreDetailsViewController : Quand on presse l'horloge on doit faire apparaitre les horaires du magazin
-[] 13. SearchViewController : Ajouter le champ pour la ville
-[] 14. CategoriesViewController : Utiliser un UICollectionView avec les icones de catégories
+[] 13. SearchViewController : Ajouter le champ pour la ville. Afficher les résultats en fonction de la position de l'utilisateur : Du plus proche au plus éloigné.
 
 ----------------------------------------
 DONE:
@@ -23,3 +21,10 @@ Ranger le clavier si on tape hors des champs.
 [x] 15. RegisterPageViewController : Faire le Log Out
 [x] 3. ProfileViewController : Gérer la mise a jour de la photo.
 [x] 16. MenuViewController : Mise a jour de la photo de profil dans le menu.
+
+
+---
+NEXT VERSION
+---
+[] 14. CategoriesViewController : Utiliser un UICollectionView avec les icones de catégories
+[] 11. StoreDetailsViewController : Quand on presse l'horloge on doit faire apparaitre les horaires du magazin
