--- a/Todo.txt
+++ b/Todo.txt
@@ -2,7 +2,6 @@
 TODO:
 ----------------------------------------
 
-[-] 4. HomeViewController : L’affichage de topStore dans cet écran pose problème. Trouver un moyen de le régler.
 [-] 8. JSONData : Les données de l’app ne se rafraichissent comme il faut.
 [] 9. Migration des données : Il faut que les données soient stockées dans Core Data pour que l'appli fonctionne offline
 [-] 10. StoreDetailsViewController : Probleme avec le label de la description (Encore :( )
@@ -22,7 +21,9 @@ Ranger le clavier si on tape hors des champs.
 [x] 15. RegisterPageViewController : Faire le Log Out
 [x] 3. ProfileViewController : Gérer la mise a jour de la photo.
 [x] 16. MenuViewController : Mise a jour de la photo de profil dans le menu.
+[x] Add Page Control for top stores & top categories in the Home Page
 
+[x] 4. HomeViewController : L’affichage de topStore dans cet écran pose problème. Trouver un moyen de le régler.
 
 ---
 NEXT VERSION
