--- a/Todo.txt
+++ b/Todo.txt
@@ -4,7 +4,6 @@ TODO:
 
 [-] 8. JSONData : Les données de l’app ne se rafraichissent comme il faut.
 [] 9. Migration des données : Il faut que les données soient stockées dans Core Data pour que l'appli fonctionne offline
-[-] 10. StoreDetailsViewController : Probleme avec le label de la description (Encore :( )
 [] 13. SearchViewController : Ajouter le champ pour la ville. Afficher les résultats en fonction de la position de l'utilisateur : Du plus proche au plus éloigné.
 [] Fix LoginViewController storyboard warnings
 
@@ -24,6 +23,7 @@ Ranger le clavier si on tape hors des champs.
 [x] Add Page Control for top stores & top categories in the Home Page
 
 [x] 4. HomeViewController : L’affichage de topStore dans cet écran pose problème. Trouver un moyen de le régler.
+[x] 10. StoreDetailsViewController : Probleme avec le label de la description (Encore :( )
 
 ---
 NEXT VERSION
