--- a/Frismart/Resources/en.lproj/Localizable.strings
+++ b/Frismart/Resources/en.lproj/Localizable.strings
@@ -6,9 +6,13 @@
   Copyright (c) 2015 Karl Mounguengui. All rights reserved.
 */
 
+"AppTitle" = "Frismart";
+"Alert_TitleOKButton" = "OK";
+
 "Error_EmptyFields" = "All fields are required";
 "Error_RegisterFailed" = "An error occurred while trying to register. Please try again later";
 "Error_FrismartLoginfailed" = "Username/Password invalid or you are being denied to access. Please try again";
+"Error_NoInternetDetectedMessageNoDataAvailable" = "No internet connection detected! The Offline mode is now activated.";
 
 "Menu_Login" = "LOGIN";
 "Menu_Home" = "HOME";
